Opened 10 years ago

Closed 7 years ago

#12034 closed bug (fixed)

wlan list is not updated

Reported by: chaotic Owned by: waddlesplash
Priority: normal Milestone: Unscheduled
Component: Network & Internet/Wireless Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #11557
Platform: All

Description

If I type

ifconfig /dev/net/atheroswifi/0 scan

a list of available wlans is shown. If I turn on my iPhone's wlan- hotspot and type the command again, the resulting list of wlans was not updated, my iPhone is not showing. I typed the command again and again and again, my iPhone is not showing. If I typed the following commands,

ifconfig /dev/net/atheroswifi/0 down

ifconfig /dev/net/atheroswifi/0 up

my iPhone will be available. In this case, however, the network connection is always interrupted. Not very useful.

Attachments (1)

syslog_ifconfig_scan (8.6 KB ) - added by luroh 10 years ago.

Download all attachments as: .zip

Change History (13)

comment:1 by luroh, 10 years ago

A syslog could prove useful.

comment:2 by diver, 10 years ago

Component: - GeneralNetwork & Internet/Wireless
Owner: changed from nobody to axeld

comment:3 by danboid, 10 years ago

I've experienced this too with different wifi APs under the last few revisions (inc. 49132 which is what I'm running now) with my Centrino 2230 so its not driver or AP specific.

The network app frequently doesn't list all available APs in range. Disabling the wifi NIC with the GUI network prefs tool doesn't change anything but bringing the interface down then up again with ifconfig as chaotic suggests normally fixes the problem.

comment:4 by chaotic, 10 years ago

Hello,

sorry for the delay, I'm a little busy with job and family. I have attached a extract from the syslog, as desired. I hope that helps a bit.

see you, chaotic

comment:5 by luroh, 10 years ago

Please attach a full syslog, it is not possible to derive what device you have (except for it likely being an Atheros one) from the previous attachment. Please attach the log unzipped so that its contents may be indexed and read in a browser.

by luroh, 10 years ago

Attachment: syslog_ifconfig_scan added

comment:6 by chaotic, 10 years ago

I tried that. But I keep getting the message that it has been identified as spam and rejected.

comment:7 by richienyhus, 10 years ago

Isn't there a captcha test that you have to do before you can upload things?

comment:8 by diver, 10 years ago

Blocking: 11557 added

(In #11557) Not enough information, at the very least the syslog is needed. Possibly a dupe of #12034. Please reopen if you think it's not.

comment:9 by axeld, 8 years ago

Owner: changed from axeld to nobody
Status: newassigned

comment:10 by waddlesplash, 7 years ago

Still an issue?

comment:11 by waddlesplash, 7 years ago

Owner: changed from nobody to waddlesplash
Status: assignedin-progress

I can reproduce this pretty easily; actually I'm not sure how it isn't a problem for more people.

comment:12 by waddlesplash, 7 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev52339.

Note: See TracTickets for help on using tickets.